kustomization/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: anthonyposchen-com
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: anthonyposchen-com
  template:
    metadata:
      labels:
        app.kubernetes.io/name: anthonyposchen-com
    spec:
      containers:
        - name: website
          image: ghcr.io/anthonyposchen/anthonyposchen.com:latest # {"$imagepolicy": "flux-system:anthonyposchen-com"}
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 42069
          readinessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 2
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 10
            periodSeconds: 30
