kustomization/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: anthonyposchen-com
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: anthonyposchen-com
  ports:
    - name: http
      port: 80
      targetPort: http
