kustomization/base/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: anthonyposchen-com
spec:
  parentRefs:
    - name: ingress
      namespace: kube-system
  hostnames:
    - anthonyposchen.com
    - www.anthonyposchen.com
  rules:
    - backendRefs:
        - name: anthonyposchen-com
          port: 80
